Excise dollar signs from */activities.tex

--- a/tex/modules/2-V/activities.tex
+++ b/tex/modules/2-V/activities.tex
@@ -470,10 +470,10 @@ since \(\IR^1=\setBuilder{cx}{c\in\IR}\).
   \end{center}
   
   \begin{enumerate}[(a)]
-  \item $1$
-  \item $2$
-  \item $3$
-  \item $4$
+  \item \(1\)
+  \item \(2\)
+  \item \(3\)
+  \item \(4\)
   \item Infinitely Many
   \end{enumerate}
 \end{activity}
@@ -489,10 +489,10 @@ since \(\IR^1=\setBuilder{cx}{c\in\IR}\).
   \end{center}
 
   \begin{enumerate}[(a)]
-  \item $1$
-  \item $2$
-  \item $3$
-  \item $4$
+  \item \(1\)
+  \item \(2\)
+  \item \(3\)
+  \item \(4\)
   \item Infinitely Many
   \end{enumerate}
 \end{activity}
