--- a/tex/modules/4-A/activities.tex
+++ b/tex/modules/4-A/activities.tex
@@ -2,7 +2,7 @@
 \begin{definition}
 A \term{linear transformation} (also known as a \term{linear map})
 is a map between vector spaces that preserves the vector space operations.
-More precisely, if \(V\) and $W$ are vector spaces, a map
+More precisely, if \(V\) and \(W\) are vector spaces, a map
 \(T:V\rightarrow W\) is called a linear transformation if
 \begin{enumerate}
 \item \(T(\vec{v}+\vec{w}) = T(\vec{v})+T(\vec{w})\)
@@ -365,7 +365,7 @@ What piece of information would help you compute \(T\left(\begin{bmatrix}0\\4\\-
 \end{activity}
 
 \begin{fact}
-Consider any basis \(\{\vec b_1,\dots,\vec b_n\}\) for $V$.  Since every
+Consider any basis \(\{\vec b_1,\dots,\vec b_n\}\) for \(V\).  Since every
 vector \(\vec v\) can be written as a linear combination of
 basis vectors, \(x_1\vec b_1+\dots+ x_n\vec b_n\), we may compute
 \(T(\vec v)\) as follows:
@@ -422,7 +422,7 @@ Then the standard matrix corresponding to \(T\) is
 \end{definition}
 
 \begin{activity}{3}
-  Let $T: \IR^4 \rightarrow \IR^3$ be the linear transformation given by
+  Let \(T: \IR^4 \rightarrow \IR^3\) be the linear transformation given by
   \[
     T\left(\vec e_1 \right)
   =
@@ -478,16 +478,16 @@ Find the standard matrix for \(T\).
 \end{fact}
 
 \begin{activity}{5}
-  Let $T: \IR^3 \rightarrow \IR^3$ be the linear transformation given by the standard matrix
+  Let \(T: \IR^3 \rightarrow \IR^3\) be the linear transformation given by the standard matrix
   \[
     \begin{bmatrix} 3  & -2 & -1  \\ 4 & 5 & 2 \\ 0 & -2 & 1 \end{bmatrix}
   .\]
 
 \begin{subactivity}
-Compute $T\left(\begin{bmatrix} x\\ y \\ z \end{bmatrix} \right) $.
+Compute \(T\left(\begin{bmatrix} x\\ y \\ z \end{bmatrix} \right) \).
 \end{subactivity}
 \begin{subactivity}
-Compute $T\left(\begin{bmatrix} 1\\ 2 \\ 3 \end{bmatrix} \right) $.
+Compute \(T\left(\begin{bmatrix} 1\\ 2 \\ 3 \end{bmatrix} \right) \).
 \end{subactivity}
 \end{activity}
 
@@ -558,7 +558,7 @@ Compute $T\left(\begin{bmatrix} 1\\ 2 \\ 3 \end{bmatrix} \right) $.
 
 
 \begin{definition}
-Let $T: V \rightarrow W$ be a linear transformation.  The \term{kernel} of $T$
+Let \(T: V \rightarrow W\) be a linear transformation.  The \term{kernel} of \(T\)
 is an important subspace of \(V\) defined by
 \[
 \ker T = \left\{ \vec{v} \in V\ \big|\ T(\vec{v})=\vec{z}\right\}
@@ -584,7 +584,7 @@ is an important subspace of \(V\) defined by
 \end{definition}
 
 \begin{activity}{5}
-Let $T: \IR^2 \rightarrow \IR^3$ be given by
+Let \(T: \IR^2 \rightarrow \IR^3\) be given by
 \[
   T\left(\begin{bmatrix}x \\ y \end{bmatrix} \right)
     =
@@ -603,7 +603,7 @@ the set of all vectors that transform into \(\vec 0\)?
 \end{activity}
 
 \begin{activity}{5}
-Let $T: \IR^3 \rightarrow \IR^2$ be given by
+Let \(T: \IR^3 \rightarrow \IR^2\) be given by
 \[
   T\left(\begin{bmatrix}x \\ y\\z \end{bmatrix} \right)
     =
@@ -625,7 +625,7 @@ the set of all vectors that transform into \(\vec 0\)?
 \end{activity}
 
 \begin{activity}{10}
-Let $T: \IR^3 \rightarrow \IR^2$ be the linear transformation given by the
+Let \(T: \IR^3 \rightarrow \IR^2\) be the linear transformation given by the
 standard matrix
 \[A=\begin{bmatrix} 3 & 4 & -1 \\ 1 & 2 & 1 \end{bmatrix}.\]
 \begin{subactivity}
@@ -642,7 +642,7 @@ Set
 \) to find a linear system of equations whose solution set is the kernel.
 \end{subactivity}
 \begin{subactivity}
-Use $\RREF(A)$ to solve this homogeneous system of equations and find a basis
+Use \(\RREF(A)\) to solve this homogeneous system of equations and find a basis
 for the kernel of \(T\).
 \end{subactivity}
 \end{activity}
@@ -656,8 +656,8 @@ Find a basis for the kernel of \(T\).
 \end{activity}
 
 \begin{definition}
-Let $T: V \rightarrow W$ be a linear transformation.
-The \term{image} of $T$ is an important subspace of \(W\) defined by
+Let \(T: V \rightarrow W\) be a linear transformation.
+The \term{image} of \(T\) is an important subspace of \(W\) defined by
 \[
 \Im T = \left\{ \vec{w} \in W\ \big|\ \text{there is some }\vec v\in V \text{ with } T(\vec{v})=\vec{w}\right\}
 \]
@@ -716,7 +716,7 @@ right example's image is a planar subspace of \(\IR^3\).
 \end{definition}
 
 \begin{activity}{5}
-Let $T: \IR^2 \rightarrow \IR^3$ be given by
+Let \(T: \IR^2 \rightarrow \IR^3\) be given by
 \[
   T\left(\begin{bmatrix}x \\ y \end{bmatrix} \right)
     =
@@ -739,7 +739,7 @@ the set of all vectors that are the result of using \(T\) to transform
 \end{activity}
 
 \begin{activity}{5}
-Let $T: \IR^3 \rightarrow \IR^2$ be given by
+Let \(T: \IR^3 \rightarrow \IR^2\) be given by
 \[
   T\left(\begin{bmatrix}x \\ y\\z \end{bmatrix} \right)
     =
@@ -760,7 +760,7 @@ the set of all vectors that are the result of using \(T\) to transform
 
 
 \begin{activity}{5}
-Let $T: \IR^4 \rightarrow \IR^3$ be the linear transformation given by the
+Let \(T: \IR^4 \rightarrow \IR^3\) be the linear transformation given by the
 standard matrix
 \[
   A
@@ -789,7 +789,7 @@ the set of vectors
 
 
 \begin{observation}
-Let $T: \IR^4 \rightarrow \IR^3$ be the linear transformation given by the
+Let \(T: \IR^4 \rightarrow \IR^3\) be the linear transformation given by the
 standard matrix
 \[
   A
@@ -822,11 +822,11 @@ and only using the vectors corresponding to pivot columns:
 \end{observation}
 
 \begin{fact}
-Let  $T:\IR^n\to\IR^m$ be a linear transformation with standard matrix $A$.
+Let  \(T:\IR^n\to\IR^m\) be a linear transformation with standard matrix \(A\).
 
 \begin{itemize}
 \item The kernel of \(T\) is the solution set of the homogeneous system given
-by the augmented matrix $\begin{bmatrix}[c|c]A&\vec 0\end{bmatrix}$.
+by the augmented matrix \(\begin{bmatrix}[c|c]A&\vec 0\end{bmatrix}\).
 Use the coefficients of its free variables to get a basis for the kernel.
 \item The image of \(T\) is the span of the columns of \(A\). Remove
 the vectors creating non-pivot columns in \(\RREF A\) to get a basis
@@ -836,7 +836,7 @@ for the image.
 
 
 \begin{activity}{10}
-Let $T: \IR^3 \rightarrow \IR^4$ be the linear transformation given by the
+Let \(T: \IR^3 \rightarrow \IR^4\) be the linear transformation given by the
 standard matrix
 \[
   A
@@ -847,10 +847,10 @@ standard matrix
 Find a basis for the kernel and a basis for the image of \(T\).
 \end{activity}
 \begin{definition}
-Let $T: V \rightarrow W$ be a linear transformation.
-$T$ is called \term{injective} or \term{one-to-one} if $T$ does not map two
-distinct vectors to the same place.  More precisely, $T$ is injective if
-$T(\vec{v}) \neq T(\vec{w})$ whenever $\vec{v} \neq \vec{w}$.
+Let \(T: V \rightarrow W\) be a linear transformation.
+\(T\) is called \term{injective} or \term{one-to-one} if \(T\) does not map two
+distinct vectors to the same place.  More precisely, \(T\) is injective if
+\(T(\vec{v}) \neq T(\vec{w})\) whenever \(\vec{v} \neq \vec{w}\).
 
 \begin{center}
 \begin{tikzpicture}[x=0.15in,y=0.15in]
@@ -898,7 +898,7 @@ $T(\vec{v}) \neq T(\vec{w})$ whenever $\vec{v} \neq \vec{w}$.
 \end{definition}
 
 \begin{activity}{3}
-Let $T: \IR^3 \rightarrow \IR^2$ be given by
+Let \(T: \IR^3 \rightarrow \IR^2\) be given by
 \[
   T\left(\begin{bmatrix}x \\ y\\z \end{bmatrix} \right)
     =
@@ -927,7 +927,7 @@ Is \(T\) injective?
 \end{activity}
 
 \begin{activity}{2}
-Let $T: \IR^2 \rightarrow \IR^3$ be given by
+Let \(T: \IR^2 \rightarrow \IR^3\) be given by
 \[
   T\left(\begin{bmatrix}x \\ y \end{bmatrix} \right)
     =
@@ -956,8 +956,8 @@ Is \(T\) injective?
 \end{activity}
 
 \begin{definition}
-Let $T: V \rightarrow W$ be a linear transformation.
-$T$ is called \term{surjective} or \term{onto} if every element of $W$ is mapped to by an element of $V$.  More precisely, for every $\vec{w} \in W$, there is some $\vec{v} \in V$ with $T(\vec{v})=\vec{w}$.
+Let \(T: V \rightarrow W\) be a linear transformation.
+\(T\) is called \term{surjective} or \term{onto} if every element of \(W\) is mapped to by an element of \(V\).  More precisely, for every \(\vec{w} \in W\), there is some \(\vec{v} \in V\) with \(T(\vec{v})=\vec{w}\).
 \begin{center}
 \begin{tikzpicture}[x=0.15in,y=0.15in]
   \begin{scope}[shift={(0,0)}]
@@ -1013,7 +1013,7 @@ $T$ is called \term{surjective} or \term{onto} if every element of $W$ is mapped
 \end{definition}
 
 \begin{activity}{3}
-Let $T: \IR^2 \rightarrow \IR^3$ be given by
+Let \(T: \IR^2 \rightarrow \IR^3\) be given by
 \[
   T\left(\begin{bmatrix}x \\ y \end{bmatrix} \right)
     =
@@ -1047,7 +1047,7 @@ can never equal
 \end{activity}
 
 \begin{activity}{2}
-Let $T: \IR^3 \rightarrow \IR^2$ be given by
+Let \(T: \IR^3 \rightarrow \IR^2\) be given by
 \[
   T\left(\begin{bmatrix}x \\ y\\z \end{bmatrix} \right)
     =
@@ -1096,7 +1096,7 @@ has a pivot in each row.
 Let \(T: V \rightarrow W\).  We have previously defined the following
 terms.
 \begin{itemize}
-\item The \term{kernel} of \(T\) is the set of all vectors in \(V\) that are mapped to $\vec{z}\in W$.  It is a subspace of \(V\).
+\item The \term{kernel} of \(T\) is the set of all vectors in \(V\) that are mapped to \(\vec{z}\in W\).  It is a subspace of \(V\).
 \item The \term{image} of \(T\) is the set of all vectors in \(W\) that are mapped to by something in \(V\).  It is a subspace of \(W\).
 \item  \(T\) is called \term{injective} or \term{one-to-one} if \(T\) always maps  distinct vectors to different places.
 \item \(T\) is called \term{surjective} or \term{onto} if every element of \(W\) is mapped to by some element of \(V\).
@@ -1115,7 +1115,7 @@ Let \(T: V \rightarrow W\) be a linear transformation where
 \end{activity}
 
 \begin{fact}
-A linear transformation $T$ is injective \textbf{if and only if} $\ker T = \{\vec{0}\}$. Put another way, an injective linear transformation may be
+A linear transformation \(T\) is injective \textbf{if and only if} \(\ker T = \{\vec{0}\}\). Put another way, an injective linear transformation may be
 recognized by its \term{trivial} kernel.
 
 \begin{center}
@@ -1147,8 +1147,8 @@ recognized by its \term{trivial} kernel.
 \end{fact}
 
 \begin{activity}{5}
-Let $T: V \rightarrow \IR^5$ be a linear transformation where
-$\Im T$ is spanned by four vectors.
+Let \(T: V \rightarrow \IR^5\) be a linear transformation where
+\(\Im T\) is spanned by four vectors.
 What can you conclude?
 \begin{enumerate}[(a)]
 \item \(T\) is injective
@@ -1159,7 +1159,7 @@ What can you conclude?
 \end{activity}
 
 \begin{fact}
-A linear transformation $T:V \rightarrow W$ is surjective \textbf{if and only if} $\Im T = W$. Put another way, a surjective linear transformation may be
+A linear transformation \(T:V \rightarrow W\) is surjective \textbf{if and only if} \(\Im T = W\). Put another way, a surjective linear transformation may be
 recognized by its identical codomain and image.
 \begin{center}
 \begin{tikzpicture}[x=0.15in,y=0.15in]
@@ -1216,20 +1216,20 @@ recognized by its identical codomain and image.
 \end{fact}
 
 \begin{activity}{15}
-Let $T: \IR^n \rightarrow \IR^m$ be a linear map with standard matrix $A$.
+Let \(T: \IR^n \rightarrow \IR^m\) be a linear map with standard matrix \(A\).
 Sort the following claims into two groups of \textit{equivalent} statements:
 one group that means \(T\) is \textbf{injective}, and one group that means
 \(T\) is \textbf{surjective}.
 \begin{multicols}{2}
 \begin{enumerate}[(a)]
 \item The kernel of \(T\) is trivial, i.e. \(\ker T=\{\vec 0\}\).
-\item The columns of $A$ span $\IR^m$.
-\item The columns of $A$ are linearly independent.
-\item Every column of $\RREF(A)$ has a pivot.
-\item Every row of $\RREF(A)$ has a pivot.
+\item The columns of \(A\) span \(\IR^m\).
+\item The columns of \(A\) are linearly independent.
+\item Every column of \(\RREF(A)\) has a pivot.
+\item Every row of \(\RREF(A)\) has a pivot.
 \item The image of \(T\) equals its codomain, i.e. \(\Im T=\IR^m\).
-\item The system of linear equations given by the augmented matrix $\begin{bmatrix}[c|c]A & \vec{b} \end{bmatrix}$ has a solution for all $\vec{b} \in \IR^m$.
-\item The system of linear equations given by the augmented matrix $\begin{bmatrix}[c|c] A & \vec{0} \end{bmatrix}$ has exactly one solution.
+\item The system of linear equations given by the augmented matrix \(\begin{bmatrix}[c|c]A & \vec{b} \end{bmatrix}\) has a solution for all \(\vec{b} \in \IR^m\).
+\item The system of linear equations given by the augmented matrix \(\begin{bmatrix}[c|c] A & \vec{0} \end{bmatrix}\) has exactly one solution.
 \end{enumerate}
 \end{multicols}
 \begin{instructorNote}
@@ -1360,12 +1360,12 @@ What is \(\RREF A\)?
 
 
 \begin{activity}{5}
-Let $T: \IR^n \rightarrow \IR^n$ be a bijective linear map with
-standard matrix $A$. Label each of the following as true or false.
+Let \(T: \IR^n \rightarrow \IR^n\) be a bijective linear map with
+standard matrix \(A\). Label each of the following as true or false.
 \begin{enumerate}[(a)]
-\item $\RREF(A)$ is the identity matrix.
-\item The columns of $A$ form a basis for $\IR^n$
-\item The system of linear equations given by the augmented matrix $\begin{bmatrix}[c|c] A & \vec{b} \end{bmatrix}$ has exactly one solution
+\item \(\RREF(A)\) is the identity matrix.
+\item The columns of \(A\) form a basis for \(\IR^n\)
+\item The system of linear equations given by the augmented matrix \(\begin{bmatrix}[c|c] A & \vec{b} \end{bmatrix}\) has exactly one solution
 for each \(\vect b \in \IR^n\).
 \end{enumerate}
 \end{activity}
@@ -1376,42 +1376,42 @@ for each \(\vect b \in \IR^n\).
 \end{observation}
 
 \begin{activity}{3}
-Let $T: \IR^3 \rightarrow \IR^3$ be given by the standard matrix $$A=\begin{bmatrix} 2&1&-1 \\ 4&1&1 \\ 6&2&1\end{bmatrix}.$$ Which of the following must be true?
+Let \(T: \IR^3 \rightarrow \IR^3\) be given by the standard matrix \[A=\begin{bmatrix} 2&1&-1 \\ 4&1&1 \\ 6&2&1\end{bmatrix}.\] Which of the following must be true?
 \begin{enumerate}[(a)]
-\item $T$ is neither injective nor surjective
-\item $T$ is injective but not surjective
-\item $T$ is surjective but not injective
-\item $T$ is bijective.
+\item \(T\) is neither injective nor surjective
+\item \(T\) is injective but not surjective
+\item \(T\) is surjective but not injective
+\item \(T\) is bijective.
 \end{enumerate}
 \end{activity}
 
 \begin{activity}{3}
-Let $T: \IR^3 \rightarrow \IR^3$ be given by $$T\left(\begin{bmatrix} x \\ y  \\ z \end{bmatrix} \right) = \begin{bmatrix} 2x+y-z \\ 4x+y+z \\ 6x+2y\end{bmatrix}.$$   Which of the following must be true?
+Let \(T: \IR^3 \rightarrow \IR^3\) be given by \[T\left(\begin{bmatrix} x \\ y  \\ z \end{bmatrix} \right) = \begin{bmatrix} 2x+y-z \\ 4x+y+z \\ 6x+2y\end{bmatrix}.\]   Which of the following must be true?
 \begin{enumerate}[(a)]
-\item $T$ is neither injective nor surjective
-\item $T$ is injective but not surjective
-\item $T$ is surjective but not injective
-\item $T$ is bijective.
+\item \(T\) is neither injective nor surjective
+\item \(T\) is injective but not surjective
+\item \(T\) is surjective but not injective
+\item \(T\) is bijective.
 \end{enumerate}
 \end{activity}
 
 \begin{activity}{3}
-Let $T: \IR^2 \rightarrow \IR^3$ be given by $$T\left(\begin{bmatrix} x \\ y \end{bmatrix} \right) = \begin{bmatrix} 2x+3y \\ x-y \\ x+3y\end{bmatrix}.$$  Which of the following must be true?
+Let \(T: \IR^2 \rightarrow \IR^3\) be given by \[T\left(\begin{bmatrix} x \\ y \end{bmatrix} \right) = \begin{bmatrix} 2x+3y \\ x-y \\ x+3y\end{bmatrix}.\]  Which of the following must be true?
 \begin{enumerate}[(a)]
-\item $T$ is neither injective nor surjective
-\item $T$ is injective but not surjective
-\item $T$ is surjective but not injective
-\item $T$ is bijective.
+\item \(T\) is neither injective nor surjective
+\item \(T\) is injective but not surjective
+\item \(T\) is surjective but not injective
+\item \(T\) is bijective.
 \end{enumerate}
 \end{activity}
 
 \begin{activity}{3}
-Let $T: \IR^3 \rightarrow \IR^2$ be given by $$T\left(\begin{bmatrix} x \\ y  \\ z \end{bmatrix} \right) = \begin{bmatrix} 2x+y-z \\ 4x+y+z\end{bmatrix}.$$  Which of the following must be true?
+Let \(T: \IR^3 \rightarrow \IR^2\) be given by \[T\left(\begin{bmatrix} x \\ y  \\ z \end{bmatrix} \right) = \begin{bmatrix} 2x+y-z \\ 4x+y+z\end{bmatrix}.\]  Which of the following must be true?
 \begin{enumerate}[(a)]
-\item $T$ is neither injective nor surjective
-\item $T$ is injective but not surjective
-\item $T$ is surjective but not injective
-\item $T$ is bijective.
+\item \(T\) is neither injective nor surjective
+\item \(T\) is injective but not surjective
+\item \(T\) is surjective but not injective
+\item \(T\) is bijective.
 \end{enumerate}
 \end{activity}
 
