--- a/tex/modules/5-M/activities.tex
+++ b/tex/modules/5-M/activities.tex
@@ -1,46 +1,46 @@
 \begin{activity}{5}
-Let $T: \IR^3 \rightarrow \IR^2$ be given by the \(2\times 3\) standard matrix $B=\begin{bmatrix} 2 & 1 & -3 \\ 5 & -3 & 4 \end{bmatrix}$ and $S: \IR^2 \rightarrow \IR^4$ be given by the \(4\times 2\) standard matrix $A=\begin{bmatrix} 1 & 2 \\ 0 & 1 \\ 3 & 5 \\ -1 & -2 \end{bmatrix}$.
+Let \(T: \IR^3 \rightarrow \IR^2\) be given by the \(2\times 3\) standard matrix \(B=\begin{bmatrix} 2 & 1 & -3 \\ 5 & -3 & 4 \end{bmatrix}\) and \(S: \IR^2 \rightarrow \IR^4\) be given by the \(4\times 2\) standard matrix \(A=\begin{bmatrix} 1 & 2 \\ 0 & 1 \\ 3 & 5 \\ -1 & -2 \end{bmatrix}\).
 
-What is the domain of the composition map $S \circ T$?
+What is the domain of the composition map \(S \circ T\)?
 \begin{enumerate}[(a)]
-\item $\IR$
-\item $\IR^2$
-\item $\IR^3$
-\item $\IR^4$
+\item \(\IR\)
+\item \(\IR^2\)
+\item \(\IR^3\)
+\item \(\IR^4\)
 \end{enumerate}
 \end{activity}
 
 \begin{activity}{3}
-Let $T: \IR^3 \rightarrow \IR^2$ be given by the \(2\times 3\) standard matrix $B=\begin{bmatrix} 2 & 1 & -3 \\ 5 & -3 & 4 \end{bmatrix}$ and $S: \IR^2 \rightarrow \IR^4$ be given by the \(4\times 2\) standard matrix $A=\begin{bmatrix} 1 & 2 \\ 0 & 1 \\ 3 & 5 \\ -1 & -2 \end{bmatrix}$.
+Let \(T: \IR^3 \rightarrow \IR^2\) be given by the \(2\times 3\) standard matrix \(B=\begin{bmatrix} 2 & 1 & -3 \\ 5 & -3 & 4 \end{bmatrix}\) and \(S: \IR^2 \rightarrow \IR^4\) be given by the \(4\times 2\) standard matrix \(A=\begin{bmatrix} 1 & 2 \\ 0 & 1 \\ 3 & 5 \\ -1 & -2 \end{bmatrix}\).
 
-What is the codomain of the composition map $S \circ T$?
+What is the codomain of the composition map \(S \circ T\)?
 \begin{enumerate}[(a)]
-\item $\IR$
-\item $\IR^2$
-\item $\IR^3$
-\item $\IR^4$
+\item \(\IR\)
+\item \(\IR^2\)
+\item \(\IR^3\)
+\item \(\IR^4\)
 \end{enumerate}
 \end{activity}
 
 \begin{activity}{2}
-Let $T: \IR^3 \rightarrow \IR^2$ be given by the \(2\times 3\) standard matrix $B=\begin{bmatrix} 2 & 1 & -3 \\ 5 & -3 & 4 \end{bmatrix}$ and $S: \IR^2 \rightarrow \IR^4$ be given by the \(4\times 2\) standard matrix $A=\begin{bmatrix} 1 & 2 \\ 0 & 1 \\ 3 & 5 \\ -1 & -2 \end{bmatrix}$.
+Let \(T: \IR^3 \rightarrow \IR^2\) be given by the \(2\times 3\) standard matrix \(B=\begin{bmatrix} 2 & 1 & -3 \\ 5 & -3 & 4 \end{bmatrix}\) and \(S: \IR^2 \rightarrow \IR^4\) be given by the \(4\times 2\) standard matrix \(A=\begin{bmatrix} 1 & 2 \\ 0 & 1 \\ 3 & 5 \\ -1 & -2 \end{bmatrix}\).
 
-What size will the standard matrix of $S \circ T:\IR^3\to\IR^4$ be?
+What size will the standard matrix of \(S \circ T:\IR^3\to\IR^4\) be?
 (Rows \(\times\) Columns)
 \begin{multicols}{3}
 \begin{enumerate}[(a)]
-\item $4 \times 3$
-\item $4 \times 2$
-\item $3 \times 4$
-\item $3 \times 2$
-\item $2 \times 4$
-\item $2 \times 3$
+\item \(4 \times 3\)
+\item \(4 \times 2\)
+\item \(3 \times 4\)
+\item \(3 \times 2\)
+\item \(2 \times 4\)
+\item \(2 \times 3\)
 \end{enumerate}
 \end{multicols}
 \end{activity}
 
 \begin{activity}{15}
-Let $T: \IR^3 \rightarrow \IR^2$ be given by the \(2\times 3\) standard matrix $B=\begin{bmatrix} 2 & 1 & -3 \\ 5 & -3 & 4 \end{bmatrix}$ and $S: \IR^2 \rightarrow \IR^4$ be given by the \(4\times 2\) standard matrix $A=\begin{bmatrix} 1 & 2 \\ 0 & 1 \\ 3 & 5 \\ -1 & -2 \end{bmatrix}$.
+Let \(T: \IR^3 \rightarrow \IR^2\) be given by the \(2\times 3\) standard matrix \(B=\begin{bmatrix} 2 & 1 & -3 \\ 5 & -3 & 4 \end{bmatrix}\) and \(S: \IR^2 \rightarrow \IR^4\) be given by the \(4\times 2\) standard matrix \(A=\begin{bmatrix} 1 & 2 \\ 0 & 1 \\ 3 & 5 \\ -1 & -2 \end{bmatrix}\).
 
 \begin{subactivity}
 Compute
@@ -68,7 +68,7 @@ Compute
 \).
 \end{subactivity}
 \begin{subactivity}
-Write the \(4\times 3\) standard matrix of $S \circ T:\IR^3\to\IR^4$.
+Write the \(4\times 3\) standard matrix of \(S \circ T:\IR^3\to\IR^4\).
 \end{subactivity}
 \end{activity}
 
@@ -224,8 +224,8 @@ Check your guess using technology.
 \end{activity}
 
 \begin{definition}
-The identity matrix $I_n$ (or just $I$ when $n$ is obvious from context) is  the $n \times n$ matrix $$I_n = \begin{bmatrix} 1 & 0  & \hdots & 0 \\ 0 & 1 & \ddots & \vdots  \\ \vdots & \ddots & \ddots & 0 \\ 0 & \hdots & 0 & 1 \end{bmatrix}.$$
-It has a $1$ on each diagonal element and a $0$ in every other position.
+The identity matrix \(I_n\) (or just \(I\) when \(n\) is obvious from context) is  the \(n \times n\) matrix \[I_n = \begin{bmatrix} 1 & 0  & \hdots & 0 \\ 0 & 1 & \ddots & \vdots  \\ \vdots & \ddots & \ddots & 0 \\ 0 & \hdots & 0 & 1 \end{bmatrix}.\]
+It has a \(1\) on each diagonal element and a \(0\) in every other position.
 \end{definition}
 
 \begin{fact}
@@ -363,7 +363,7 @@ Check your work using technology.
 
 
 \begin{activity}{15}
-Let $T: \IR^n \rightarrow \IR^m$ be a linear map with standard matrix $A$.
+Let \(T: \IR^n \rightarrow \IR^m\) be a linear map with standard matrix \(A\).
 Sort the following items into three groups of statements: a group that means
 \(T\) is \textbf{injective}, a group that means \(T\) is \textbf{surjective},
 and a group that means \(T\) is \textbf{bijective}.
@@ -372,12 +372,12 @@ and a group that means \(T\) is \textbf{bijective}.
 \item \(A\vec x=\vec b\) has a solution for all \(\vec b\in\IR^m\)
 \item \(A\vec x=\vec b\) has a unique solution for all \(\vec b\in\IR^m\)
 \item \(A\vec x=\vec 0\) has a unique solution.
-\item The columns of $A$ span $\IR^m$
-\item The columns of $A$ are linearly independent
-\item The columns of $A$ are a basis of $\IR^m$
-\item Every column of $\RREF(A)$ has a pivot
-\item Every row of $\RREF(A)$ has a pivot
-\item $m=n$ and $\RREF(A)=I$
+\item The columns of \(A\) span \(\IR^m\)
+\item The columns of \(A\) are linearly independent
+\item The columns of \(A\) are a basis of \(\IR^m\)
+\item Every column of \(\RREF(A)\) has a pivot
+\item Every row of \(\RREF(A)\) has a pivot
+\item \(m=n\) and \(\RREF(A)=I\)
 \end{enumerate}
 \end{multicols}
 \end{activity}
@@ -393,14 +393,14 @@ and a group that means \(T\) is \textbf{bijective}.
 
 
 \begin{definition}
-  Let $T: \IR^n \rightarrow \IR^n$ be a linear map with standard matrix $A$.
+  Let \(T: \IR^n \rightarrow \IR^n\) be a linear map with standard matrix \(A\).
 \begin{itemize}
-\item  If $T$ is a bijection and \(\vec b\) is any $\IR^n$ vector, 
-  then $T(\vec x)=A\vec x=\vec b$ has a unique solution.
-\item So we may define an \term{inverse map} $T^{-1} : \IR^n \rightarrow \IR^n$ 
-  by setting $T^{-1}(\vec b)$ to be this unique solution.
-\item Let $A^{-1}$ be the standard matrix for $T^{-1}$. We call $A^{-1}$ the
-\term{inverse matrix} of $A$, so we also say that $A$ is \term{invertible}.
+\item  If \(T\) is a bijection and \(\vec b\) is any \(\IR^n\) vector, 
+  then \(T(\vec x)=A\vec x=\vec b\) has a unique solution.
+\item So we may define an \term{inverse map} \(T^{-1} : \IR^n \rightarrow \IR^n\) 
+  by setting \(T^{-1}(\vec b)\) to be this unique solution.
+\item Let \(A^{-1}\) be the standard matrix for \(T^{-1}\). We call \(A^{-1}\) the
+\term{inverse matrix} of \(A\), so we also say that \(A\) is \term{invertible}.
 \end{itemize}
 \end{definition}
 
@@ -449,11 +449,11 @@ by row reducing the matrix \([A\,|\,I]\) at once.
 \end{activity}
 
 \begin{activity}{5}
-Is the matrix $\begin{bmatrix} 2 & 3 & 1 \\ -1 & -4 & 2 \\ 0 & -5 & 5 \end{bmatrix}$ invertible? Give a reason for your answer.
+Is the matrix \(\begin{bmatrix} 2 & 3 & 1 \\ -1 & -4 & 2 \\ 0 & -5 & 5 \end{bmatrix}\) invertible? Give a reason for your answer.
 \end{activity}
 
 \begin{observation}
-    An \(n\times n\) matrix $A$ is invertible if and only if $\RREF(A) = I_n$.
+    An \(n\times n\) matrix \(A\) is invertible if and only if \(\RREF(A) = I_n\).
 \end{observation}
 
 \begin{activity}{10}
