--- a/tex/modules/6-G/activities.tex
+++ b/tex/modules/6-G/activities.tex
@@ -1,7 +1,7 @@
 \begin{activity}{5}
 The image below illustrates how the linear transformation
-$T : \IR^2 \rightarrow \IR^2$ given by the
-standard matrix $A = \begin{bmatrix} 2 & 0 \\ 0 & 3 \end{bmatrix}$
+\(T : \IR^2 \rightarrow \IR^2\) given by the
+standard matrix \(A = \begin{bmatrix} 2 & 0 \\ 0 & 3 \end{bmatrix}\)
 transforms the unit square.
 
 \begin{center}
@@ -9,8 +9,8 @@ transforms the unit square.
 \fill[red!50!white] (0,0) rectangle (1,1);`
 \draw[thin,gray,<->] (-4,0)-- (4,0);
 \draw[thin,gray,<->] (0,-4)-- (0,4);
-\draw[thick,blue,->] (0,0) -- node[below] {$A \vec{e}_1= \begin{bmatrix}2 \\ 0 \end{bmatrix}$}++ (2,0);
-\draw[thick,blue,->] (0,0) -- node[left] {$A \vec{e}_2 = \begin{bmatrix} 0 \\ 3 \end{bmatrix}$}++(0,3);
+\draw[thick,blue,->] (0,0) -- node[below] {\(A \vec{e}_1= \begin{bmatrix}2 \\ 0 \end{bmatrix}\)}++ (2,0);
+\draw[thick,blue,->] (0,0) -- node[left] {\(A \vec{e}_2 = \begin{bmatrix} 0 \\ 3 \end{bmatrix}\)}++(0,3);
 \draw[thick,red,->] (0,0) -- ++(1,0);
 \draw[thick,red,->] (0,0) -- ++(0,1);
 \draw[blue,dashed] (2,0) -- (2,3) -- (0,3);
@@ -28,8 +28,8 @@ transforms the unit square.
 
 \begin{activity}{5}
 The image below illustrates how the linear transformation
-$S : \IR^2 \rightarrow \IR^2$ given by the
-standard matrix $B = \begin{bmatrix} 2 & 3 \\ 0 & 4 \end{bmatrix}$.
+\(S : \IR^2 \rightarrow \IR^2\) given by the
+standard matrix \(B = \begin{bmatrix} 2 & 3 \\ 0 & 4 \end{bmatrix}\).
 transforms the unit square.
 
 \begin{center}
@@ -37,8 +37,8 @@ transforms the unit square.
 \fill[red!50!white] (0,0) rectangle (1,1);
 \draw[thin,gray,<->] (-4,0)-- (4,0);
 \draw[thin,gray,<->] (0,-4)-- (0,4);
-\draw[thick,blue,->] (0,0) -- node[below] {$B \vec{e}_1= \begin{bmatrix}2 \\ 0 \end{bmatrix}$}++ (2,0);
-\draw[thick,blue,->] (0,0) -- ++(3,4) node[above] {$B \vec{e}_2 = \begin{bmatrix} 3 \\ 4 \end{bmatrix}$};
+\draw[thick,blue,->] (0,0) -- node[below] {\(B \vec{e}_1= \begin{bmatrix}2 \\ 0 \end{bmatrix}\)}++ (2,0);
+\draw[thick,blue,->] (0,0) -- ++(3,4) node[above] {\(B \vec{e}_2 = \begin{bmatrix} 3 \\ 4 \end{bmatrix}\)};
 \draw[thick,red,->] (0,0) -- ++(1,0);
 \draw[thick,red,->] (0,0) -- ++(0,1);
 \draw[blue,dashed] (2,0) -- (5,4) -- (3,4);
@@ -77,8 +77,8 @@ transforms the unit square.
   \fill[red!50!white] (0,0) -- (1,0) -- (1.75,0.5) -- (0.75,0.5) -- (0,0);
   \draw[thin,gray,<->] (-4,0)-- (4,0);
   \draw[thin,gray,<->] (0,-4)-- (0,4);
-  \draw[thick,blue,->] (0,0) -- node[below] {$B\begin{bmatrix}1\\0\end{bmatrix}=2\begin{bmatrix}1\\0\end{bmatrix}$}++ (2,0);
-  \draw[thick,blue,->] (0,0) -- ++(3,2) node[above] {$B\begin{bmatrix}\frac{3}{4}\\\frac{1}{2}\end{bmatrix}=4\begin{bmatrix}\frac{3}{4}\\\frac{1}{2}\end{bmatrix}$};
+  \draw[thick,blue,->] (0,0) -- node[below] {\(B\begin{bmatrix}1\\0\end{bmatrix}=2\begin{bmatrix}1\\0\end{bmatrix}\)}++ (2,0);
+  \draw[thick,blue,->] (0,0) -- ++(3,2) node[above] {\(B\begin{bmatrix}\frac{3}{4}\\\frac{1}{2}\end{bmatrix}=4\begin{bmatrix}\frac{3}{4}\\\frac{1}{2}\end{bmatrix}\)};
   \draw[thick,red,->] (0,0) -- (1,0);
   \draw[thick,red,->] (0,0) -- (0.75,0.5);
   \draw[red,dashed] (1,0) -- (1.75,0.5) -- (0.75,0.5);
@@ -102,8 +102,8 @@ transforms the unit square.
 \fill[red!50!white] (0,0) rectangle (1,1);
 \draw[thin,gray,<->] (-4,0)-- (4,0);
 \draw[thin,gray,<->] (0,-4)-- (0,4);
-\draw[thick,blue,->] (0,0) -- node[below] {$B \vec{e}_1= \begin{bmatrix}2 \\ 0 \end{bmatrix}$}++ (2,0);
-\draw[thick,blue,->] (0,0) -- ++(3,4) node[above] {$B \vec{e}_2 = \begin{bmatrix} 3 \\ 4 \end{bmatrix}$};
+\draw[thick,blue,->] (0,0) -- node[below] {\(B \vec{e}_1= \begin{bmatrix}2 \\ 0 \end{bmatrix}\)}++ (2,0);
+\draw[thick,blue,->] (0,0) -- ++(3,4) node[above] {\(B \vec{e}_2 = \begin{bmatrix} 3 \\ 4 \end{bmatrix}\)};
 \draw[thick,red,->] (0,0) -- ++(1,0);
 \draw[thick,red,->] (0,0) -- ++(0,1);
 \draw[blue,dashed] (2,0) -- (5,4) -- (3,4);
@@ -113,8 +113,8 @@ transforms the unit square.
   \fill[red!50!white] (0,0) -- (1,0) -- (1.75,0.5) -- (0.75,0.5) -- (0,0);
   \draw[thin,gray,<->] (-4,0)-- (4,0);
   \draw[thin,gray,<->] (0,-4)-- (0,4);
-  \draw[thick,blue,->] (0,0) -- node[below] {$B\begin{bmatrix}1\\0\end{bmatrix}=2\begin{bmatrix}1\\0\end{bmatrix}$}++ (2,0);
-  \draw[thick,blue,->] (0,0) -- ++(3,2) node[above] {$B\begin{bmatrix}\frac{3}{4}\\\frac{1}{2}\end{bmatrix}=4\begin{bmatrix}\frac{3}{4}\\\frac{1}{2}\end{bmatrix}$};
+  \draw[thick,blue,->] (0,0) -- node[below] {\(B\begin{bmatrix}1\\0\end{bmatrix}=2\begin{bmatrix}1\\0\end{bmatrix}\)}++ (2,0);
+  \draw[thick,blue,->] (0,0) -- ++(3,2) node[above] {\(B\begin{bmatrix}\frac{3}{4}\\\frac{1}{2}\end{bmatrix}=4\begin{bmatrix}\frac{3}{4}\\\frac{1}{2}\end{bmatrix}\)};
   \draw[thick,red,->] (0,0) -- (1,0);
   \draw[thick,red,->] (0,0) -- (0.75,0.5);
   \draw[red,dashed] (1,0) -- (1.75,0.5) -- (0.75,0.5);
@@ -134,8 +134,8 @@ or \(\det(A)\) for short, to be the factor by which \(A\) scales areas.  In orde
 \fill[red!50!white] (0,0) rectangle (1,1);
 \draw[thin,gray,<->] (-4,0)-- (4,0);
 \draw[thin,gray,<->] (0,-4)-- (0,4);
-\draw[thick,blue,->] (0,0) -- node[below] {$B \vec{e}_1= \begin{bmatrix}2 \\ 0 \end{bmatrix}$}++ (2,0);
-\draw[thick,blue,->] (0,0) -- ++(3,4) node[above] {$B \vec{e}_2 = \begin{bmatrix} 3 \\ 4 \end{bmatrix}$};
+\draw[thick,blue,->] (0,0) -- node[below] {\(B \vec{e}_1= \begin{bmatrix}2 \\ 0 \end{bmatrix}\)}++ (2,0);
+\draw[thick,blue,->] (0,0) -- ++(3,4) node[above] {\(B \vec{e}_2 = \begin{bmatrix} 3 \\ 4 \end{bmatrix}\)};
 \draw[thick,red,->] (0,0) -- ++(1,0);
 \draw[thick,red,->] (0,0) -- ++(0,1);
 \draw[blue,dashed] (2,0) -- (5,4) -- (3,4);
@@ -145,8 +145,8 @@ or \(\det(A)\) for short, to be the factor by which \(A\) scales areas.  In orde
   \fill[red!50!white] (0,0) -- (1,0) -- (1.75,0.5) -- (0.75,0.5) -- (0,0);
   \draw[thin,gray,<->] (-4,0)-- (4,0);
   \draw[thin,gray,<->] (0,-4)-- (0,4);
-  \draw[thick,blue,->] (0,0) -- node[below] {$B\begin{bmatrix}1\\0\end{bmatrix}=2\begin{bmatrix}1\\0\end{bmatrix}$}++ (2,0);
-  \draw[thick,blue,->] (0,0) -- ++(3,2) node[above] {$B\begin{bmatrix}\frac{3}{4}\\\frac{1}{2}\end{bmatrix}=4\begin{bmatrix}\frac{3}{4}\\\frac{1}{2}\end{bmatrix}$};
+  \draw[thick,blue,->] (0,0) -- node[below] {\(B\begin{bmatrix}1\\0\end{bmatrix}=2\begin{bmatrix}1\\0\end{bmatrix}\)}++ (2,0);
+  \draw[thick,blue,->] (0,0) -- ++(3,2) node[above] {\(B\begin{bmatrix}\frac{3}{4}\\\frac{1}{2}\end{bmatrix}=4\begin{bmatrix}\frac{3}{4}\\\frac{1}{2}\end{bmatrix}\)};
   \draw[thick,red,->] (0,0) -- (1,0);
   \draw[thick,red,->] (0,0) -- (0.75,0.5);
   \draw[red,dashed] (1,0) -- (1.75,0.5) -- (0.75,0.5);
@@ -159,15 +159,15 @@ or \(\det(A)\) for short, to be the factor by which \(A\) scales areas.  In orde
 \begin{activity}{2}
 The transformation of the unit square by the
 standard matrix \([\vec{e}_1\hspace{0.5em} \vec{e}_2]=\begin{bmatrix}1&0\\0&1\end{bmatrix}=I\) is illustrated below.
-What is $\det([\vec{e}_1\hspace{0.5em} \vec{e}_2])=\det(I)$, the
+What is \(\det([\vec{e}_1\hspace{0.5em} \vec{e}_2])=\det(I)\), the
 area of the transformed unit square shown here?
 \begin{center}
 \begin{tikzpicture}[scale=1]
 \fill[red!50!white] (0,0) rectangle (1,1);
 \draw[thin,gray,<->] (-1,0)-- (3,0);
 \draw[thin,gray,<->] (0,-1)-- (0,3);
-\draw[thick,blue,->] (0,0) -- node[below] {$\vec{e}_1=\begin{bmatrix}1 \\ 0 \end{bmatrix}$} (1,0);
-\draw[thick,blue,->] (0,0) -- node[left] {$\vec{e}_2=\begin{bmatrix} 0 \\ 1 \end{bmatrix}$} (0,1);
+\draw[thick,blue,->] (0,0) -- node[below] {\(\vec{e}_1=\begin{bmatrix}1 \\ 0 \end{bmatrix}\)} (1,0);
+\draw[thick,blue,->] (0,0) -- node[left] {\(\vec{e}_2=\begin{bmatrix} 0 \\ 1 \end{bmatrix}\)} (0,1);
 \draw[dashed,blue] (1,0) -- (1,1);
 \draw[dashed,blue] (0,1) -- (1,1);
 \end{tikzpicture}
@@ -191,7 +191,7 @@ the area of the transformed unit square shown here?
 \fill[red!50!white] (0,0) rectangle (1,1);
 \draw[thin,gray,<->] (-1,0)-- (4,0);
 \draw[thin,gray,<->] (0,-1)-- (0,4);
-\draw[thick,blue,->] (0,0) -- node[below] {$\vec{v}$} (3,2);
+\draw[thick,blue,->] (0,0) -- node[below] {\(\vec{v}\)} (3,2);
 \end{tikzpicture}
 \end{center}
   \begin{enumerate}[a)]
@@ -212,10 +212,10 @@ Describe the value of \(\det([c\vec{v}\hspace{0.5em} \vec{w}])\).
 \begin{tikzpicture}[scale=0.8]
 \draw[thin,gray,<->] (-1,0)-- (6,0);
 \draw[thin,gray,<->] (0,-1)-- (0,6);
-\draw[thick,red,->] (0,0) -- node[below right] {$c\vec{v}$}  (4,2);
+\draw[thick,red,->] (0,0) -- node[below right] {\(c\vec{v}\)}  (4,2);
 \draw[thick,red,->] (1,3) -- (5,5);
-\draw[thick,blue,->] (0,0) -- node[below] {$\vec{v}$} (3,1.5);
-\draw[thick,purple,->] (0,0) -- node[left] {$\vec{w}$} (1,3);
+\draw[thick,blue,->] (0,0) -- node[below] {\(\vec{v}\)} (3,1.5);
+\draw[thick,purple,->] (0,0) -- node[left] {\(\vec{w}\)} (1,3);
 \draw[lightgray,very thick,dashed] (1,3) -- (2,1);
 \draw[thick,blue,->] (3,1.5) -- (4,4.5);
 \draw[thick,blue,->] (1,3) -- (4,4.5);
@@ -239,14 +239,14 @@ Describe the value of \(\det([\vec{u}+\vec{v}\hspace{0.5em} \vec{w}])\).
 \begin{tikzpicture}[scale=0.8]
 \draw[thin,gray,<->] (-1,0)-- (6,0);
 \draw[thin,gray,<->] (0,-1)-- (0,6);
-\draw[thick,blue,->] (0,0) -- node[below] {$\vec{u}$} (2,1);
-\draw[thick,purple,->] (0,0) -- node[left] {$\vec{w}$} (1,3);
-\draw[thick,blue,->] (2,1) -- node [below] {$\vec{v}$}(3,2);
+\draw[thick,blue,->] (0,0) -- node[below] {\(\vec{u}\)} (2,1);
+\draw[thick,purple,->] (0,0) -- node[left] {\(\vec{w}\)} (1,3);
+\draw[thick,blue,->] (2,1) -- node [below] {\(\vec{v}\)}(3,2);
 \draw[thick,purple,->] (2,1) -- (3,4);
 \draw[thick,purple,->] (3,2) -- (4,5);
 \draw[thick,blue,->] (1,3) -- (3,4);
 \draw[thick,blue,->] (3,4) -- (4,5);
-\draw[thick,red,->] (0,0) --  (3,2)node[above,right] {$\vec{u}+\vec{v}$};
+\draw[thick,red,->] (0,0) --  (3,2)node[above,right] {\(\vec{u}+\vec{v}\)};
 \draw[thick,red,->] (1,3) -- (4,5);
 \end{tikzpicture}
 \end{center}
@@ -266,8 +266,8 @@ Describe the value of \(\det([\vec{u}+\vec{v}\hspace{0.5em} \vec{w}])\).
 The \term{determinant} is the unique function
 \(\det:M_{n,n}\to\IR\) satisfying these  properties:
 \begin{enumerate}
-\item [P1:] $\det(I)=1$
-\item [P2:] $\det(A)=0$ whenever two columns of the matrix are identical.
+\item [P1:] \(\det(I)=1\)
+\item [P2:] \(\det(A)=0\) whenever two columns of the matrix are identical.
 \item[P3:]
 \(\det[\cdots\hspace{0.5em}c\vec{v}\hspace{0.5em}\cdots]=
 c\det[\cdots\hspace{0.5em}\vec{v}\hspace{0.5em}\cdots]\), assuming no other columns change.
@@ -293,11 +293,11 @@ Consider \(\det([\vec v \hspace{1em}\vec w+c \vec{v}])\) and
 \begin{tikzpicture}[scale=0.5]
 \draw[thin,gray,<->] (-1,0)-- (8,0);
 \draw[thin,gray,<->] (0,-1)-- (0,6);
-\draw[very thick,blue,->] (0,0) -- node[below right] {$\vec{v}$}  (3,1);
-\draw[very thick,blue,->] (0,0) -- node[left] {$\vec{w}$} (1,2);
+\draw[very thick,blue,->] (0,0) -- node[below right] {\(\vec{v}\)}  (3,1);
+\draw[very thick,blue,->] (0,0) -- node[left] {\(\vec{w}\)} (1,2);
 \draw[dashed,blue,->] (1,2) -- (4,3);
 \draw[dashed,blue,->] (3,1) -- (4,3);
-\draw[thick,red,->] (0,0) -- (5.5,3.5) node[above] {$\vec{w}+c\vec{v}$};
+\draw[thick,red,->] (0,0) -- (5.5,3.5) node[above] {\(\vec{w}+c\vec{v}\)};
 \draw[dashed,red,->] (3,1) -- (8.5,4.5);
 \draw[dashed,blue,->] (5.5,3.5) -- (8.5,4.5);
 \draw[thin,dashed,gray] (3,1) -- (2.5,2.5);
@@ -305,7 +305,7 @@ Consider \(\det([\vec v \hspace{1em}\vec w+c \vec{v}])\) and
 \end{tikzpicture}
 \end{center}
 
-The base of both parallelograms is $\vec{v}$, while the height has not changed,
+The base of both parallelograms is \(\vec{v}\), while the height has not changed,
 so the determinant does not change either. This can also be proven using the
 other properties of the determinant:
   \begin{align*}
@@ -337,8 +337,8 @@ the same parallelogram, but the second matrix reflects its orientation.
 \fill[red!50!white] (0,0) rectangle (1,1);
 \draw[thin,gray,<->] (-4,0)-- (4,0);
 \draw[thin,gray,<->] (0,-4)-- (0,4);
-\draw[thick,blue,->] (0,0) -- node[below] {$A \vec{e}_1= \begin{bmatrix}2 \\ 0 \end{bmatrix}$}++ (2,0);
-\draw[thick,blue,->] (0,0) -- ++(3,4) node[above] {$A \vec{e}_2 = \begin{bmatrix} 3 \\ 4 \end{bmatrix}$};
+\draw[thick,blue,->] (0,0) -- node[below] {\(A \vec{e}_1= \begin{bmatrix}2 \\ 0 \end{bmatrix}\)}++ (2,0);
+\draw[thick,blue,->] (0,0) -- ++(3,4) node[above] {\(A \vec{e}_2 = \begin{bmatrix} 3 \\ 4 \end{bmatrix}\)};
 \draw[thick,red,->] (0,0) -- ++(1,0);
 \draw[thick,red,->] (0,0) -- ++(0,1);
 \draw[blue,dashed] (2,0) -- (5,4) -- (3,4);
@@ -348,8 +348,8 @@ the same parallelogram, but the second matrix reflects its orientation.
 \fill[red!50!white] (0,0) rectangle (1,1);
 \draw[thin,gray,<->] (-4,0)-- (4,0);
 \draw[thin,gray,<->] (0,-4)-- (0,4);
-\draw[thick,blue,->] (0,0) -- node[below] {$B \vec{e}_2= \begin{bmatrix}2 \\ 0 \end{bmatrix}$}++ (2,0);
-\draw[thick,blue,->] (0,0) -- ++(3,4) node[above] {$B \vec{e}_1 = \begin{bmatrix} 3 \\ 4 \end{bmatrix}$};
+\draw[thick,blue,->] (0,0) -- node[below] {\(B \vec{e}_2= \begin{bmatrix}2 \\ 0 \end{bmatrix}\)}++ (2,0);
+\draw[thick,blue,->] (0,0) -- ++(3,4) node[above] {\(B \vec{e}_1 = \begin{bmatrix} 3 \\ 4 \end{bmatrix}\)};
 \draw[thick,red,->] (0,0) -- ++(1,0);
 \draw[thick,red,->] (0,0) -- ++(0,1);
 \draw[blue,dashed] (2,0) -- (5,4) -- (3,4);
@@ -671,7 +671,7 @@ into the determinant of a smaller matrix.
 \begin{activity}{5}
   The following image illustrates the transformation of the unit cube
   by the matrix
-  $\begin{bmatrix} 1 & 1 & 0 \\  1 & 3 & 1 \\  0 & 0 & 1\end{bmatrix}$.
+  \(\begin{bmatrix} 1 & 1 & 0 \\  1 & 3 & 1 \\  0 & 0 & 1\end{bmatrix}\).
 
   \begin{center}
   \begin{tikzpicture}
@@ -687,11 +687,11 @@ into the determinant of a smaller matrix.
   \draw[blue] (3,0,1) -- +(1,1,0);
 
   \draw[purple,thick,->] (0,0,0) -- (1,1,0)
-    node[above left]{\tiny$\begin{bmatrix} 0 \\ 1 \\ 1\end{bmatrix}$};
+    node[above left]{\tiny\(\begin{bmatrix} 0 \\ 1 \\ 1\end{bmatrix}\)};
   \draw[purple,thick,->] (0,0,0) -- (1,0,1)
-    node[below]{\tiny$\begin{bmatrix} 1 \\ 1 \\ 0\end{bmatrix}$};
+    node[below]{\tiny\(\begin{bmatrix} 1 \\ 1 \\ 0\end{bmatrix}\)};
   \draw[purple,thick,->] (0,0,0) -- (3,0,1)
-    node[above left]{\tiny$\begin{bmatrix} 1 \\ 3 \\ 0\end{bmatrix}$};
+    node[above left]{\tiny\(\begin{bmatrix} 1 \\ 3 \\ 0\end{bmatrix}\)};
   \draw[purple,dashed,very thick] (0,0,0) -- node[left] {\tiny\(h=1\)} (0,1,0);
   \end{tikzpicture}
   \end{center}
@@ -700,10 +700,10 @@ into the determinant of a smaller matrix.
   So what must its volume be?
 \begin{multicols}{4}
 \begin{enumerate}[(a)]
-\item $\det \begin{bmatrix} 1 & 1 \\ 1 & 3 \end{bmatrix}$
-\item $\det \begin{bmatrix} 1 & 0 \\ 3 & 1 \end{bmatrix}$
-\item $\det \begin{bmatrix} 1 & 1 \\ 0 & 1 \end{bmatrix}$
-\item $\det \begin{bmatrix} 1 & 3 \\ 0 & 0 \end{bmatrix}$
+\item \(\det \begin{bmatrix} 1 & 1 \\ 1 & 3 \end{bmatrix}\)
+\item \(\det \begin{bmatrix} 1 & 0 \\ 3 & 1 \end{bmatrix}\)
+\item \(\det \begin{bmatrix} 1 & 1 \\ 0 & 1 \end{bmatrix}\)
+\item \(\det \begin{bmatrix} 1 & 3 \\ 0 & 0 \end{bmatrix}\)
 \end{enumerate}
 \end{multicols}
 \end{activity}
@@ -749,7 +749,7 @@ a \(1\) on the main diagonal.
 
 \begin{activity}{5}
   Remove an appropriate row and column of  
-  $\det \begin{bmatrix} 1 & 0 & 0 \\ 1 & 5 & 12 \\ 3 & 2 & -1 \end{bmatrix}$
+  \(\det \begin{bmatrix} 1 & 0 & 0 \\ 1 & 5 & 12 \\ 3 & 2 & -1 \end{bmatrix}\)
   to simplify the determinant to a \(2\times 2\) determinant.
 \end{activity}
 
@@ -985,10 +985,10 @@ given by the matrix \(A = \begin{bmatrix} 2 & 2 \\ 0 & 3 \end{bmatrix}\).
 \fill[red!50] (0,0) rectangle (1,1);
 \draw[thin,gray,<->] (-1,0)-- (4,0);
 \draw[thin,gray,<->] (0,-1)-- (0,4);
-\draw[thick,blue,->] (0,0) -- node[below right] {$A \vec{e}_1$}++ (2,0);
-\draw[thick,red,->] (0,0) -- node[below] {$\vec{e}_1$}++ (1,0);
-\draw[thick,blue,->] (0,0) -- node[above left] {$A \vec{e}_2$}++(2,3);
-\draw[thick,red,->] (0,0) -- node[left] {$\vec{e}_2$}++ (0,1);
+\draw[thick,blue,->] (0,0) -- node[below right] {\(A \vec{e}_1\)}++ (2,0);
+\draw[thick,red,->] (0,0) -- node[below] {\(\vec{e}_1\)}++ (1,0);
+\draw[thick,blue,->] (0,0) -- node[above left] {\(A \vec{e}_2\)}++(2,3);
+\draw[thick,red,->] (0,0) -- node[left] {\(\vec{e}_2\)}++ (0,1);
 \draw[blue,dashed] (2,0) -- (4,3) -- (2,3);
 \draw[purple!50!blue,thick,->] (0,0) -- (6,3);
 \draw[purple!50!red,thick,->] (0,0) -- (2,1);
@@ -1012,19 +1012,19 @@ It is less obvious (but easily checked once you find it) that
 \end{observation}
 
 \begin{definition}
-Let $A \in M_{n,n}$.
+Let \(A \in M_{n,n}\).
 An \term{eigenvector} for \(A\) 
-is a vector $\vec{x} \in \IR^n$ such that $A\vec{x}$ is parallel to $\vec{x}$.
+is a vector \(\vec{x} \in \IR^n\) such that \(A\vec{x}\) is parallel to \(\vec{x}\).
 
 \begin{center}
 \begin{tikzpicture}[scale=0.75]
 \fill[gray!50] (0,0) rectangle (1,1);
 \draw[thin,gray,<->] (-1,0)-- (4,0);
 \draw[thin,gray,<->] (0,-1)-- (0,4);
-\draw[thick,blue,->] (0,0) -- node[below right] {$A \vec{e}_1=2\vec e_1$}++ (2,0);
-\draw[thick,red,->] (0,0) -- node[below] {$\vec{e}_1$}++ (1,0);
-\draw[thick,gray,->] (0,0) -- node[above left] {$A \vec{e}_2$}++(2,3);
-\draw[thick,gray,->] (0,0) -- node[left] {$\vec{e}_2$}++ (0,1);
+\draw[thick,blue,->] (0,0) -- node[below right] {\(A \vec{e}_1=2\vec e_1\)}++ (2,0);
+\draw[thick,red,->] (0,0) -- node[below] {\(\vec{e}_1\)}++ (1,0);
+\draw[thick,gray,->] (0,0) -- node[above left] {\(A \vec{e}_2\)}++(2,3);
+\draw[thick,gray,->] (0,0) -- node[left] {\(\vec{e}_2\)}++ (0,1);
 \draw[gray,dashed] (2,0) -- (4,3) -- (2,3);
 \draw[purple!50!blue,thick,->] (0,0) -- (6,3) 
   node [below right] {\(
@@ -1037,7 +1037,7 @@ is a vector $\vec{x} \in \IR^n$ such that $A\vec{x}$ is parallel to $\vec{x}$.
 \end{tikzpicture}
 \end{center}
 
-In other words, $A\vec{x}=\lambda \vec{x}$ for some scalar $\lambda$. 
+In other words, \(A\vec{x}=\lambda \vec{x}\) for some scalar \(\lambda\). 
 If \(\vec x\not=\vec 0\), then we say \(\vec x\) is a \term{nontrivial eigenvector}
 and we call this \(\lambda\) an \term{eigenvalue} of \(A\).
 \end{definition}
@@ -1106,28 +1106,28 @@ and its eigenvalues are the solutions to \(\lambda^2-5\lambda-2=0\).
 
 
 \begin{activity}{10}
-Let $A = \begin{bmatrix} 5 & 2 \\ -3 & -2 \end{bmatrix}$.
+Let \(A = \begin{bmatrix} 5 & 2 \\ -3 & -2 \end{bmatrix}\).
 \begin{subactivity}
-Compute $\det (A-\lambda I)$ to determine the characteristic polynomial of $A$.
+Compute \(\det (A-\lambda I)\) to determine the characteristic polynomial of \(A\).
 \end{subactivity}
 \begin{subactivity}
-Set this characteristic polynomial equal to zero and factor to determine the eigenvalues of $A$.
+Set this characteristic polynomial equal to zero and factor to determine the eigenvalues of \(A\).
 \end{subactivity}
 \end{activity}
 
 \begin{activity}{5}
   Find all the eigenvalues for the matrix
-  $A=\begin{bmatrix} 3 & -3 \\ 2 & -4 \end{bmatrix}$.
+  \(A=\begin{bmatrix} 3 & -3 \\ 2 & -4 \end{bmatrix}\).
 \end{activity}
 
 \begin{activity}{5}
   Find all the eigenvalues for the matrix
-  $A=\begin{bmatrix} 1 & -4 \\ 0 & 5 \end{bmatrix}$.
+  \(A=\begin{bmatrix} 1 & -4 \\ 0 & 5 \end{bmatrix}\).
 \end{activity}
 
 \begin{activity}{10}
   Find all the eigenvalues for the matrix
-  $A=\begin{bmatrix} 3 & -3 & 1 \\ 0 & -4 & 2 \\ 0 & 0 & 7 \end{bmatrix}$.
+  \(A=\begin{bmatrix} 3 & -3 & 1 \\ 0 & -4 & 2 \\ 0 & 0 & 7 \end{bmatrix}\).
 \end{activity}
 
 
