--- a/tex/course-slides.sty
+++ b/tex/course-slides.sty
@@ -157,6 +157,17 @@
 	}
 }
 
+\NewEnviron{quickcheck}{ 
+  \stepcounter{ActivityCounter}
+  \activityCheck{%
+	  \begin{frame}
+	  \textbf{Quick Check \moduleLetter{}.\theActivityCounter}
+
+		\BODY
+	  \end{frame}
+	}
+}
+
 \NewEnviron{observation}{
   \stepcounter{ActivityCounter}
   \activityCheck{%
