--- a/tex/modules/2-V/activities.tex
+++ b/tex/modules/2-V/activities.tex
@@ -68,7 +68,7 @@ and \textbf{invalid} if it does not.
 \end{observation}
 
 \begin{observation}
-The space of \term{\(m \times n\) matrices}
+The space of \(m \times n\)\term{matrices}
   \[
     M_{m,n}=\setBuilder{\begin{bmatrix}a_{11}  & a_{12} & \cdots & a_{1n} \\ a_{21} & a_{22} & \cdots & a_{2n} \\\vdots & \vdots & & \ddots & \vdots \\a_{m1} & a_{m2} & \cdots & a_{mn} \end{bmatrix}}{a_{11},\ldots,a_{mn} \in\IR}
   \] 
@@ -388,25 +388,29 @@ The space of \term{\(m \times n\) matrices}
 \begin{fact}
   A vector \(\vect b\) belongs to
   \(\vspan\{\vect v_1,\dots,\vect v_n\}\) if and only if
-  the linear system corresponding to
+	the vector equation \(x_1 \vec{v}_1+\cdots+x_n \vec{v_n}=\vec{b}\) is consistent.
+\end{fact}
+
+\begin{quickcheck}
+The following are all equivalent statements:
+\begin{itemize}
+\item The vector \(\vec{b}\) belongs to \(\vspan\{\vect v_1,\dots,\vect v_n\}\).
+\item The vector equation \(x_1 \vec{v}_1+\cdots+x_n \vec{v_n}=\vec{b}\) is consistent.
+\item The linear system corresponding to
   \([\vect v_1\,\dots\,\vect v_n \,|\, \vect b]\)
   is consistent.
-
-  \vspace{1em}
-
-  Put another way, \(\vect b\) belongs to
-  \(\vspan\{\vect v_1,\dots,\vect v_n\}\) exactly when
-  \(\RREF[\vect v_1\,\dots\,\vect v_n \,|\, \vect b]\)
+\item  \(\RREF[\vect v_1\,\dots\,\vect v_n \,|\, \vect b]\)
   doesn't have a row \([0\,\cdots\,0\,|\,1]\)
   representing the contradiction \(0=1\).
-\end{fact}
+\end{itemize}
+\end{quickcheck}
 
 \begin{activity}{10}
   Determine if
   \(\begin{bmatrix}3\\-2\\1 \\ 5\end{bmatrix}\) belongs to
   \(\vspan\left\{\begin{bmatrix}1\\0\\-3 \\ 2\end{bmatrix},
   \begin{bmatrix}-1\\-3\\2 \\ 2\end{bmatrix}\right\}\)
-  by row-reducing an appropriate matrix.
+  by solving an appropriate vector equation.
 \end{activity}
 
 \begin{activity}{5}
@@ -414,7 +418,7 @@ The space of \term{\(m \times n\) matrices}
   \(\begin{bmatrix}-1\\-9\\0\end{bmatrix}\) belongs to
   \(\vspan\left\{\begin{bmatrix}1\\0\\-3\end{bmatrix},
   \begin{bmatrix}-1\\-3\\2\end{bmatrix}\right\}\)
-  by row-reducing an appropriate matrix.
+  by solving an appropriate vector equation.
 \end{activity}
 
 
@@ -422,12 +426,10 @@ The space of \term{\(m \times n\) matrices}
   Does the third-degree polynomial \(3y^3-2y^2+y+5\) in \(\P^3\) belong to
   \(\vspan\{y^3-3y+2,-y^3-3y^2+2y+2\}\)?
   \begin{subactivity}
-  	Reinterpret this question as an equivalent exercise involving Euclidean
-    vectors in \(\IR^4\). (Hint: What four numbers must you know to write
-    a \(\P^3\) polynomial?)
+  	Reinterpret this question as a question about the solution(s) of a polynomial equation.
   \end{subactivity}
   \begin{subactivity}
-  	Solve this equivalent exercise, and use its solution to answer the original
+  	Answer this equivalent question, and use its solution to answer the original
     question.
   \end{subactivity}
 \end{activity}
@@ -441,8 +443,14 @@ The space of \term{\(m \times n\) matrices}
   Does the matrix \(\begin{bmatrix}3&-2\\1&5\end{bmatrix}\) belong to
   \(\vspan\left\{\begin{bmatrix}1&0\\-3&2\end{bmatrix},
   \begin{bmatrix}-1&-3\\2&2\end{bmatrix}\right\}\)?
+  \begin{subactivity}
+  	Reinterpret this question as a question about the solution(s) of a matrix equation.
+  \end{subactivity}
+  \begin{subactivity}
+  	Answer this equivalent question, and use its solution to answer the original
+    question.
+  \end{subactivity}
 \end{activity}
-
 
 
 \begin{observation}
@@ -535,7 +543,11 @@ since \(\IR^1=\setBuilder{cx}{c\in\IR}\).
 
 \begin{fact}
   The set \(\{\vect v_1,\dots,\vect v_m\}\) fails to span all of \(\IR^n\)
-  exactly when \(\RREF[\vect v_1\,\dots\,\vect v_m]\) has a non-pivot row of zeros.
+  exactly when the vector equation
+	\[ x_1 \vec{v}_1 + \cdots x_m\vec{v}_m = \vec{w} \]
+  is inconsistent for \textbf{some} vector \(\vec{w}\).
+  \vfill
+  Note that this happens exactly when \(\RREF[\vect v_1\,\dots\,\vect v_m]\) has a non-pivot row of zeros.
   \[\begin{bmatrix}[cc]1&-2\\-1&0\\0&1\end{bmatrix}\sim
   \begin{bmatrix}[cc]1&0\\0&1\\0&0\end{bmatrix}\]
   \[\Rightarrow
@@ -548,13 +560,17 @@ since \(\IR^1=\setBuilder{cx}{c\in\IR}\).
   Consider the set of vectors \(S=\left\{
   \begin{bmatrix}2\\3\\0\\-1\end{bmatrix},
   \begin{bmatrix}1\\-4\\3\\0\end{bmatrix},
-  \begin{bmatrix}2\\0\\0\\3\end{bmatrix},
+  \begin{bmatrix}1\\7\\-3\\-1\end{bmatrix},
   \begin{bmatrix}0\\3\\5\\7\end{bmatrix},
   \begin{bmatrix}3\\13\\7\\16\end{bmatrix}
   \right\}
   \).
   Does
   \(\IR^4=\vspan S\)?
+	\begin{subactivity}Rewrite this as a question about the solutions to a vector equation.
+	\end{subactivity}
+	\begin{subactivity}Answer your new question, and use this to answer the original question.
+	\end{subactivity}
 \end{activity}
 
 \begin{activity}{10}
@@ -569,7 +585,10 @@ since \(\IR^1=\setBuilder{cx}{c\in\IR}\).
   \end{align*}
   Does
   \(\P^3=\vspan S\)?
-  (Hint: first rewrite the question so it is about Euclidean vectors.)
+	\begin{subactivity}Rewrite this as a question about the solutions to a polynomial equation.
+	\end{subactivity}
+	\begin{subactivity}Answer your new question, and use this to answer the original question.
+	\end{subactivity}
 \end{activity}
 
 \begin{activity}{5}
@@ -580,6 +599,10 @@ Consider the set of matrices
 		\begin{bmatrix} 1 & 0 \\ 0 & 2 \end{bmatrix}
 		\right\} \]
 Does \(M_{2,2} = \vspan S\)?
+	\begin{subactivity}Rewrite this as a question about the solutions to a matrix equation.
+	\end{subactivity}
+	\begin{subactivity}Answer your new question, and use this to answer the original question.
+	\end{subactivity}
 \end{activity}
 
 \begin{activity}{5}
@@ -799,7 +822,7 @@ Let \(W\) be a subspace of a vector space \(V\).  How are \(\vspan W\) and \(W\)
 \begin{fact}
   For any vector space,
   the set \(\{\vect v_1,\dots\vect v_n\}\) is linearly dependent if and only
-  if \(x_1\vect v_1+\dots+x_n\vect v_n=\vect z\) is consistent with
+  if the vector equation \(x_1\vect v_1+\dots+x_n\vect v_n=\vect z\) is consistent with
   infinitely many solutions.
 \end{fact}
 
@@ -809,7 +832,7 @@ Let \(W\) be a subspace of a vector space \(V\).  How are \(\vspan W\) and \(W\)
   2&2&3&-1&4&0\\
   3&0&13&10&3&0\\
   0&0&7&7&0&0\\
-  -1&3&16&14&2&0
+  -1&3&16&14&1&0
   \end{bmatrix}
   \]
   and mark the part of the matrix that demonstrates that
@@ -818,19 +841,19 @@ Let \(W\) be a subspace of a vector space \(V\).  How are \(\vspan W\) and \(W\)
   \begin{bmatrix}2\\0\\0\\3\end{bmatrix},
   \begin{bmatrix}3\\13\\7\\16\end{bmatrix},
   \begin{bmatrix}-1\\10\\7\\14\end{bmatrix},
-  \begin{bmatrix}4\\3\\0\\2\end{bmatrix}
+  \begin{bmatrix}4\\3\\0\\1\end{bmatrix}
   \right\}
   \]
   is linearly dependent (the part that shows its linear system has
   infinitely many solutions).
 \end{activity}
 
-\begin{fact}
+\begin{quickcheck}
   A set of Euclidean vectors
   \(\{\vect v_1,\dots\vect v_n\}\) is linearly dependent if and only
   if \(\RREF\begin{bmatrix}\vect v_1&\dots&\vect v_n\end{bmatrix}\)
   has a column without a pivot position.
-\end{fact}
+\end{quickcheck}
 
 
 \begin{observation}
@@ -855,12 +878,24 @@ Let \(W\) be a subspace of a vector space \(V\).  How are \(\vspan W\) and \(W\)
   \begin{bmatrix}1\\10\\10\\2\\6\end{bmatrix},
   \begin{bmatrix}3\\4\\7\\2\\1\end{bmatrix}
   \right\}\) linearly dependent or linearly independent?
+\begin{subactivity}
+Reinterpret this question as an appropriate question about solutions to a vector equation.
+\end{subactivity}
+\begin{subactivity} 
+Use the solution to this question to answer the original question.
+\end{subactivity}
 \end{activity}
 
 \begin{activity}{10}
   Is the set of polynomials \(\left\{
   x^3+1,x^2+2x,x^2+7x+4
   \right\}\) linearly dependent or linearly independent?
+\begin{subactivity}
+Reinterpret this question as an appropriate question about solutions to a polynomial equation.
+\end{subactivity}
+\begin{subactivity} 
+Use the solution to this question to answer the original question.
+\end{subactivity}
 \end{activity}
 
 \begin{activity}{5}
@@ -1528,3 +1563,4 @@ The basis of the trivial vector space is the empty set.  You can denote this as 
 \vfill
 Thus, if \(\vec{0}\) is the only solution of a homogeneous system, the basis of the solution space is  \(\emptyset\).
 \end{observation}
+
