--- a/tex/modules/6-G/activities.tex
+++ b/tex/modules/6-G/activities.tex
@@ -445,23 +445,26 @@ Recall that row operations may be produced by matrix multiplication.
 \begin{itemize}
 \item Multiply the first row of \(A\) by \(c\): \(
   \begin{bmatrix}
-  c & 0 & 0 \\
-  0 & 1 & 0 \\
-  0 & 0 & 1
+  c & 0 & 0 & 0\\
+  0 & 1 & 0 & 0 \\
+  0 & 0 & 1 & 0 \\
+  0 & 0 & 0 & 1
   \end{bmatrix}A
 \)
 \item Swap the first and second row of \(A\): \(
   \begin{bmatrix}
-  0 & 1 & 0 \\
-  1 & 0 & 0 \\
-  0 & 0 & 1
+  0 & 1 & 0 & 0\\
+  1 & 0 & 0 & 0\\
+  0 & 0 & 1 & 0 \\
+  0 & 0 & 0 & 1
   \end{bmatrix}A
 \)
 \item Add \(c\) times the third row to the first row of \(A\): \(
   \begin{bmatrix}
-  1 & 0 & c \\
-  0 & 1 & 0 \\
-  0 & 0 & 1
+  1 & 0 & c & 0 \\
+  0 & 1 & 0 & 0 \\
+  0 & 0 & 1 & 0 \\
+  0 & 0 & 0 & 1
   \end{bmatrix}A
 \)
 \end{itemize}
@@ -474,48 +477,54 @@ by manipulating columns to reduce each matrix to the identity:
 \begin{itemize}
 \item Scaling a row: \(\det
   \begin{bmatrix}
-  c & 0 & 0 \\
-  0 & 1 & 0 \\
-  0 & 0 & 1
+  c & 0 & 0 & 0\\
+  0 & 1 & 0 & 0 \\
+  0 & 0 & 1 & 0 \\
+  0 & 0 & 0 & 1
   \end{bmatrix}
     =
   c\det
   \begin{bmatrix}
-  1 & 0 & 0 \\
-  0 & 1 & 0 \\
-  0 & 0 & 1
+  1 & 0 & 0 & 0\\
+  0 & 1 & 0 & 0  \\
+  0 & 0 & 1 & 0 \\
+  0 & 0 & 0 & 1
   \end{bmatrix}
     =
   c
 \)
 \item Swapping rows: \(\det
   \begin{bmatrix}
-  0 & 1 & 0 \\
-  1 & 0 & 0 \\
-  0 & 0 & 1
+  0 & 1 & 0 & 0 \\
+  1 & 0 & 0 & 0 \\
+  0 & 0 & 1 & 0 \\
+  0 & 0 & 0 & 1
   \end{bmatrix}
     =
   -1\det
   \begin{bmatrix}
-  1 & 0 & 0 \\
-  0 & 1 & 0 \\
-  0 & 0 & 1
+  1 & 0 & 0 & 0\\
+  0 & 1 & 0 & 0\\
+  0 & 0 & 1 & 0 \\
+  0 & 0 & 0 & 1
   \end{bmatrix}
     =
   -1
 \)
 \item Adding a row multiple to another row: \(\det
   \begin{bmatrix}
-  1 & 0 & c \\
-  0 & 1 & 0 \\
-  0 & 0 & 1
+  1 & 0 & c & 0\\
+  0 & 1 & 0 & 0\\
+  0 & 0 & 1 & 0 \\
+  0 & 0 & 0 & 1
   \end{bmatrix}
     =
   \det
   \begin{bmatrix}
-  1 & 0 & c-1c \\
-  0 & 1 & 0-0c \\
-  0 & 0 & 1-0c
+  1 & 0 & c-1c & 0\\
+  0 & 1 & 0-0c & 0\\
+  0 & 0 & 1-0c & 0 \\
+  0 & 0 & 0-0c & 1
   \end{bmatrix}
     =
   \det(I)=1
@@ -527,13 +536,13 @@ by manipulating columns to reduce each matrix to the identity:
 Consider the row operation \(R_1+4R_3\to R_1\) applied as follows to show
 \(A\sim B\):
 \[
-A=\begin{bmatrix}1&2&3\\4&5&6\\7&8&9\end{bmatrix}
+A=\begin{bmatrix}1&2&3 & 4\\5&6 & 7 & 8\\9 & 10 & 11 & 12\end{bmatrix} 
   \sim
-\begin{bmatrix}1+4(7)&2+4(8)&3+4(9)\\4&5&6\\7&8&9\end{bmatrix}=B
+\begin{bmatrix}1+4(9)&2+4(10)&3+4(11) & 4+4(12) \\5&6 & 6 & 8\\9 & 10 & 11 & 12\end{bmatrix}=B
 \]
 \begin{enumerate}[(a)]
 \item Find a matrix \(R\) such that \(B=RA\), by applying the same row operation to 
-\(I=\begin{bmatrix}1&0&0\\0&1&0\\0&0&1\end{bmatrix}\).
+\(I=\begin{bmatrix}1&0&0&0\\0&1&0&0\\0&0&1&0\\0&0&0&1\end{bmatrix}\).
 \item Find \(\det R\) by comparing with the previous slide.
 \item If \(C \in M_{3,3}\) is a matrix with \(\det(C)= -3\), find 
 \[\det(RC)=\det(R)\det(C).\]
@@ -544,9 +553,9 @@ A=\begin{bmatrix}1&2&3\\4&5&6\\7&8&9\end{bmatrix}
 Consider the row operation \(R_1\leftrightarrow R_3\) applied as follows to show
 \(A\sim B\):
 \[
-A=\begin{bmatrix}1&2&3\\4&5&6\\7&8&9\end{bmatrix}
+A=\begin{bmatrix}1&2&3&4\\5&6&7&8\\9&10&11&12\end{bmatrix}
   \sim
-\begin{bmatrix}7&8&9\\4&5&6\\1&2&3\end{bmatrix}=B
+\begin{bmatrix}9&10&11&12\\5&6&7&8\\1&2&3&4\end{bmatrix}=B
 \]
 \begin{enumerate}[(a)]
 \item Find a matrix \(R\) such that \(B=RA\), by applying the same row operation to \(I\).
@@ -558,9 +567,9 @@ A=\begin{bmatrix}1&2&3\\4&5&6\\7&8&9\end{bmatrix}
 Consider the row operation \(3R_2\to R_2\) applied as follows to show
 \(A\sim B\):
 \[
-A=\begin{bmatrix}1&2&3\\4&5&6\\7&8&9\end{bmatrix}
+A=\begin{bmatrix}1&2&3&4\\5&6&7&8\\9&10&11&12\end{bmatrix}
   \sim
-\begin{bmatrix}1&2&3\\3(4)&3(5)&3(6)\\7&8&9\end{bmatrix}=B
+\begin{bmatrix}1&2&3&4\\3(5)&3(6)&3(7)&3(8)\\9&10&11&12\end{bmatrix}=B
 \]
 \begin{enumerate}[(a)]
 \item Find a matrix \(R\) such that \(B=RA\).
@@ -594,23 +603,26 @@ by manipulating columns to reduce each matrix to the identity:
 \begin{itemize}
 \item Scaling a row: \(  
   \begin{bmatrix}
-  1 & 0 & 0 \\
-  0 & c & 0 \\
-  0 & 0 & 1
+  1 & 0 & 0 &0  \\
+  0 & c & 0 &0\\
+  0 & 0 & 1 &0 \\
+  0 & 0 & 0 & 0
   \end{bmatrix}
 \)
 \item Swapping rows: \(
   \begin{bmatrix}
-  0 & 1 & 0 \\
-  1 & 0 & 0 \\
-  0 & 0 & 1
+  0 & 1 & 0 &0 \\
+  1 & 0 & 0 & 0\\
+  0 & 0 & 1 & 0 \\
+  0 & 0 & 0 & 0
   \end{bmatrix}
 \)
 \item Adding a row multiple to another row: \(
   \begin{bmatrix}
-  1 & 0 & 0 \\
-  0 & 1 & c \\
-  0 & 0 & 1
+  1 & 0 & 0 & 0\\
+  0 & 1 & c & 0\\
+  0 & 0 & 1 & 0 \\
+  0 & 0 & 0 & 0
   \end{bmatrix}
 \)
 \end{itemize}
@@ -825,7 +837,7 @@ Rewrite \[\det \begin{bmatrix} 2 & 1 & -2 & 1 \\ 3 & 0 & 1 & 4 \\ -2 & 2 & 3 & 0
 \end{activity}
 
 
-\begin{activity}{10}
+\begin{activity}{20}
   Compute 
   \(
     \det\begin{bmatrix} 
@@ -908,17 +920,6 @@ formula for a \(4\times 4\) determinant would require 24 different terms!
 So this is why we either use Laplace expansion or row/column operations directly.
 \end{observation}
 
-\begin{activity}{10}
-  Use Laplace expansion to compute 
-  \(
-    \det\begin{bmatrix} 
-      2 & 2 & 1 & 0 \\ 
-      0 & 3 & 2 & -1 \\ 
-      3 & 2 & 0 & 3 \\ 
-      0 & -3 & 2 & -2 
-    \end{bmatrix}
-  \).
-\end{activity}
 
 \begin{activity}{5}
 Based on what we've done today, which technique is easier for computing determinants?
